update constants and give some comments

--- a/configs/Constants.tex
+++ b/configs/Constants.tex
@@ -2,10 +2,10 @@
 % A blank field will be set to its default value 
 
 \author{Your name here}
-\title{A \LaTeX{} Thesis Template for ENCS Graduate Student from Concordia University}
+\title{this is thesis title name A \LaTeX{} Thesis Template for ENCS Graduate Student from Concordia University}
 
 % For master's degree only, will be ignored if PhD.  Default: Master of Applied Science
-\mastersDegree{Master of Applied Science}
+\mastersDegree{Master of Computer Science}
 
 %##### BEGIN: FOR PhD ONLY #####
 % or Ms., Mrs., Miss, etc. (only for PhD's)
@@ -15,10 +15,10 @@
 %#### END: FOR PhD Only #####
 
 % program towards your degree. E.g., Mechanical Engineering, Quality System Engineering. Default: I.E.
-\program{Industrial Engineering}
+\program{Computer Science}
 
 % your department. Default:  Mechanical and Industrial Engineering
-\dept{Mechanical and Industrial Engineering}
+\dept{Computer Science and Software Engineering}
 
 % your department chair. default:  Martin D. Pugh, Chair of MIE (As of Oct 2015)
 \chairOfDept{Martin D. Pugh}
@@ -34,7 +34,7 @@
 \principaladvisor{Name of Supervisor}
 
 %%Following two lines are required if you have a co-supervisor
-%\cosupervisor
-%\myCoSupervisor{Name of Co-supervisor}
+\cosupervisor
+\myCoSupervisor{Name of Co-supervisor}
 
 %###################  End: Degree info  #######################
